...

    <string name="treba_alko">Молебен o страдающих алкоголизмом и наркоманией</string>
    <string name="treba_k_rodam">Молебен для готовящихся к родам</string>
    <string name="treba_pered_dobrim_delom">Перед началом всякого доброго дела</string>
    <string name="treba_blagodarstvenniy">Молебен благодарственный</string>
    <string name="treba_petru_i_fevronii">Молебен Петру и Февронии о супружеском счастье</string>
    <string name="create_treba_step2">Шаг 2. Укажите имена</string>
    <string name="create_treba_step1">Шаг 1. Выберите требу или записку</string>
    <string name="create_treba_step3">Шаг 3. Выберите храм</string>
    <string name="telegram_chats_connect_text">Подключите наш новый чат. Мы используем платформу от Telegram. Ваш номер телефона никому не будет виден, пока вы не добавите контакт в друзья.</string>
    <string name="fragment_telegram_connect_button">Подключить</string>

    <string name="fragment_chat_no_telegram">Этот пользователь еще не установил новый чат. Напишите ему, используя старый.</string>

...
