...
                app:errorEnabled="false"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/treba_step2_name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:lines="1"
...
